[package]
name = "kpipe"
version = "0.3.0"
edition = "2021"
description = "Kubernetes Userspace Network Tunnel - transparent access to K8s services"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tsroka/kpipe"
homepage = "https://github.com/tsroka/kpipe"
readme = "README.md"
keywords = ["kubernetes", "networking", "tunnel", "vpn", "k8s"]
categories = ["network-programming", "command-line-utilities"]
authors = ["Tomek Sroka"]

[features]
default = ["stack-smoltcp"]
stack-lwip = ["dep:lwip"]
stack-smoltcp = ["dep:netstack-smoltcp"]

[dependencies]
# TUN device management
tun2 = { version = "4.0.0", features = ["async"] }

# Userspace TCP/IP stack backends (select via features)
lwip = { version = "0.3.15", optional = true }
netstack-smoltcp = { version = "0.2.0", optional = true }

# Kubernetes client
kube = { version = "0.98.0", features = ["client", "runtime", "ws"] }
k8s-openapi = { version = "0.24.0", features = ["v1_32"] }

# Async runtime
tokio = { version = "1.42", features = ["full"] }
futures = "0.3"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Networking utilities
bytes = "1.9"
etherparse = "0.16"
netdev = "0.37"
socket2 = { version = "0.5", features = ["all"] }
libc = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Lock-free data structures
arc-swap = "1.7"
dashmap = "6.1"

# DNS protocol
hickory-proto = "0.25"
hickory-resolver = "0.25"

# Async utilities
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# HTTP API
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling with RFC3339 serialization
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.14.0"
log = "0.4.29"
net-route = "0.4.6"

# macOS-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
system-configuration = "0.6"

[profile.release]
opt-level = 3
lto = true

# Debian package configuration
[package.metadata.deb]
maintainer = "Tomek Sroka <tomek@sroka.dev>"
copyright = "2024, Tomek Sroka"
license-file = ["LICENSE-MIT", "4"]
extended-description = """\
kpipe creates a transparent network tunnel that connects your local machine \
directly to a Kubernetes cluster. Access internal Kubernetes services \
(like http://my-service.default) from your local browser or terminal \
as if your laptop were physically inside the cluster network."""
depends = "$auto"
section = "net"
priority = "optional"
assets = [
    ["target/release/kpipe", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/kpipe/README", "644"],
]
